parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    INDENT

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program definition
Rule 3     program -> empty
Rule 4     definition -> trait_definition
Rule 5     definition -> character_definition
Rule 6     definition -> setting_definition
Rule 7     definition -> item_definition
Rule 8     trait_definition -> TRAIT ID COLON desc_or_nothing s_directive f_or_nothing END_BLOCK
Rule 9     character_definition -> CHARACTER ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK
Rule 10    setting_definition -> SETTING ID COLON desc_or_nothing s_directive END_BLOCK
Rule 11    item_definition -> ITEM ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing END_BLOCK
Rule 12    desc_or_nothing -> description_string
Rule 13    desc_or_nothing -> empty
Rule 14    description_string -> string_value
Rule 15    s_directive -> START COLON start_list END_BLOCK
Rule 16    start_list -> statement_list
Rule 17    d_or_nothing -> d_directive
Rule 18    d_or_nothing -> empty
Rule 19    d_directive -> DIALOGUE COLON dialogue_list END_BLOCK
Rule 20    dialogue_list -> LABEL COLON statement_list END_BLOCK dialogue_list
Rule 21    dialogue_list -> empty
Rule 22    a_or_nothing -> a_directive
Rule 23    a_or_nothing -> empty
Rule 24    a_directive -> ACTIONS COLON action_list END_BLOCK
Rule 25    action_list -> string_value COLON statement_list END_BLOCK action_list
Rule 26    action_list -> empty
Rule 27    f_or_nothing -> f_directive
Rule 28    f_or_nothing -> empty
Rule 29    f_directive -> FUNCTIONS COLON function_list END_BLOCK
Rule 30    function_list -> function_list ID args_or_nothing COLON statement_list END_BLOCK
Rule 31    function_list -> empty
Rule 32    args_or_nothing -> WITH ID optional_args
Rule 33    args_or_nothing -> empty
Rule 34    optional_args -> optional_args COMMA ID
Rule 35    optional_args -> empty
Rule 36    statement_list -> statement_list statement
Rule 37    statement_list -> empty
Rule 38    statement -> print
Rule 39    statement -> add
Rule 40    statement -> remove
Rule 41    statement -> set
Rule 42    statement -> move
Rule 43    statement -> increase
Rule 44    statement -> decrease
Rule 45    statement -> initiate
Rule 46    statement -> conditional
Rule 47    statement -> execute
Rule 48    statement -> goto
Rule 49    statement -> using
Rule 50    statement -> EXIT
Rule 51    conditional -> IF tf_expression COLON statement_list END_BLOCK else_if_conditional else_conditional
Rule 52    else_if_conditional -> else_if_conditional ELSE IF tf_expression COLON statement_list END_BLOCK
Rule 53    else_if_conditional -> empty
Rule 54    else_conditional -> ELSE COLON statement_list END_BLOCK
Rule 55    else_conditional -> empty
Rule 56    goto -> GOTO LABEL
Rule 57    execute -> EXECUTE object_chain passed_args
Rule 58    passed_args -> WITH arg optional_passed_args
Rule 59    passed_args -> empty
Rule 60    optional_passed_args -> optional_passed_args COMMA arg
Rule 61    optional_passed_args -> empty
Rule 62    arg -> arithmetic_expression
Rule 63    arg -> string_expression
Rule 64    arg -> tf_expression
Rule 65    print -> PRINT string_expression
Rule 66    add -> ADD quantity ID TO object_chain
Rule 67    add -> ADD primitive TO object_chain
Rule 68    quantity -> LBRACK arithmetic_expression RBRACK
Rule 69    quantity -> empty
Rule 70    arithmetic_expression -> arithmetic_or_object PLUS arithmetic_or_object
Rule 71    arithmetic_expression -> arithmetic_or_object MINUS arithmetic_or_object
Rule 72    arithmetic_expression -> arithmetic_or_object MODULUS arithmetic_or_object
Rule 73    arithmetic_expression -> arithmetic_or_object DIVIDE arithmetic_or_object
Rule 74    arithmetic_expression -> arithmetic_or_object MULTIPLY arithmetic_or_object
Rule 75    arithmetic_expression -> arithmetic_or_object POWER arithmetic_or_object
Rule 76    arithmetic_expression -> MINUS arithmetic_or_object
Rule 77    arithmetic_expression -> LPAREN arithmetic_or_object RPAREN
Rule 78    arithmetic_expression -> INTEGER_VAL
Rule 79    arithmetic_expression -> DECIMAL_VAL
Rule 80    to_or_nothing -> TO object_chain
Rule 81    to_or_nothing -> empty
Rule 82    object_chain -> object_chain ON ID
Rule 83    object_chain -> ID
Rule 84    primitive -> integer_primitive
Rule 85    primitive -> decimal_primitive
Rule 86    primitive -> string_primitive
Rule 87    primitive -> tf_primitive
Rule 88    integer_primitive -> LBRACE INTEGER ID ASSIGN numeric_literal RBRACE
Rule 89    decimal_primitive -> LBRACE DECIMAL ID ASSIGN numeric_literal RBRACE
Rule 90    string_primitive -> LBRACE STRING ID ASSIGN string_expression RBRACE
Rule 91    tf_primitive -> LBRACE TF ID ASSIGN tf_expression RBRACE
Rule 92    numeric_literal -> arithmetic_expression
Rule 93    numeric_literal -> object_chain
Rule 94    string_value -> STRING_VAL
Rule 95    string_expression -> string_expression CONCAT string_literal
Rule 96    string_expression -> string_literal
Rule 97    string_literal -> string_value
Rule 98    string_literal -> object_chain
Rule 99    tf_expression -> tf_expression OR tf_expression
Rule 100   tf_expression -> tf_expression AND tf_expression
Rule 101   tf_expression -> NOT tf_expression
Rule 102   tf_expression -> LPAREN tf_expression RPAREN
Rule 103   tf_expression -> tf_literal
Rule 104   tf_literal -> has_expression
Rule 105   tf_literal -> relational_expression
Rule 106   tf_literal -> TRUE
Rule 107   tf_literal -> FALSE
Rule 108   relational_operand -> tf_literal
Rule 109   relational_operand -> object_chain
Rule 110   relational_operand -> arithmetic_expression
Rule 111   relational_operand -> string_value
Rule 112   has_expression -> object_chain HAS ID
Rule 113   has_expression -> HAS ID
Rule 114   relational_expression -> relational_operand relational_operator relational_operand
Rule 115   relational_operator -> LTHAN
Rule 116   relational_operator -> GTHAN
Rule 117   relational_operator -> LTHANEQ
Rule 118   relational_operator -> GTHANEQ
Rule 119   relational_operator -> ISEQUAL
Rule 120   relational_operator -> NOTEQUAL
Rule 121   relational_operator -> EQUALS
Rule 122   relational_operator -> NOT EQUALS
Rule 123   remove -> REMOVE quantity ID from_or_nothing
Rule 124   from_or_nothing -> FROM object_chain
Rule 125   from_or_nothing -> empty
Rule 126   set -> SET object_chain TO arg
Rule 127   move -> MOVE character_or_nothing TO object_chain
Rule 128   character_or_nothing -> object_chain
Rule 129   character_or_nothing -> empty
Rule 130   arithmetic_or_object -> arithmetic_expression
Rule 131   arithmetic_or_object -> object_chain
Rule 132   increase -> INCREASE object_chain BY arithmetic_or_object
Rule 133   decrease -> DECREASE object_chain BY arithmetic_or_object
Rule 134   initiate -> INITIATE DIALOGUE AT LABEL
Rule 135   using -> USING string_value

Terminals, with rules where they appear

ACTIONS              : 24
ADD                  : 66 67
AND                  : 100
ASSIGN               : 88 89 90 91
AT                   : 134
BY                   : 132 133
CHARACTER            : 9
COLON                : 8 9 10 11 15 19 20 24 25 29 30 51 52 54
COMMA                : 34 60
COMMENT              : 
CONCAT               : 95
DECIMAL              : 89
DECIMAL_VAL          : 79
DECREASE             : 133
DIALOGUE             : 19 134
DIVIDE               : 73
ELSE                 : 52 54
END_BLOCK            : 8 9 10 11 15 19 20 24 25 29 30 51 52 54
EQUALS               : 121 122
EXECUTE              : 57
EXIT                 : 50
FALSE                : 107
FROM                 : 124
FUNCTIONS            : 29
GOTO                 : 56
GTHAN                : 116
GTHANEQ              : 118
HAS                  : 112 113
ID                   : 8 9 10 11 30 32 34 66 82 83 88 89 90 91 112 113 123
IF                   : 51 52
INCREASE             : 132
INDENT               : 
INITIATE             : 134
INTEGER              : 88
INTEGER_VAL          : 78
ISEQUAL              : 119
ITEM                 : 11
LABEL                : 20 56 134
LBRACE               : 88 89 90 91
LBRACK               : 68
LPAREN               : 77 102
LTHAN                : 115
LTHANEQ              : 117
MINUS                : 71 76
MODULUS              : 72
MOVE                 : 127
MULTIPLY             : 74
NOT                  : 101 122
NOTEQUAL             : 120
ON                   : 82
OR                   : 99
PLUS                 : 70
POWER                : 75
PRINT                : 65
RBRACE               : 88 89 90 91
RBRACK               : 68
REMOVE               : 123
RPAREN               : 77 102
SET                  : 126
SETTING              : 10
START                : 15
STRING               : 90
STRING_VAL           : 94
TF                   : 91
TO                   : 66 67 80 126 127
TRAIT                : 8
TRUE                 : 106
USING                : 135
WITH                 : 32 58
error                : 

Nonterminals, with rules where they appear

a_directive          : 22
a_or_nothing         : 9 11
action_list          : 24 25
add                  : 39
arg                  : 58 60 126
args_or_nothing      : 30
arithmetic_expression : 62 68 92 110 130
arithmetic_or_object : 70 70 71 71 72 72 73 73 74 74 75 75 76 77 132 133
character_definition : 5
character_or_nothing : 127
conditional          : 46
d_directive          : 17
d_or_nothing         : 9
decimal_primitive    : 85
decrease             : 44
definition           : 2
desc_or_nothing      : 8 9 10 11
description_string   : 12
dialogue_list        : 19 20
else_conditional     : 51
else_if_conditional  : 51 52
empty                : 3 13 18 21 23 26 28 31 33 35 37 53 55 59 61 69 81 125 129
execute              : 47
f_directive          : 27
f_or_nothing         : 8 9 11
from_or_nothing      : 123
function_list        : 29 30
goto                 : 48
has_expression       : 104
increase             : 43
initiate             : 45
integer_primitive    : 84
item_definition      : 7
move                 : 42
numeric_literal      : 88 89
object_chain         : 57 66 67 80 82 93 98 109 112 124 126 127 128 131 132 133
optional_args        : 32 34
optional_passed_args : 58 60
passed_args          : 57
primitive            : 67
print                : 38
program              : 2 0
quantity             : 66 123
relational_expression : 105
relational_operand   : 114 114
relational_operator  : 114
remove               : 40
s_directive          : 8 9 10 11
set                  : 41
setting_definition   : 6
start_list           : 15
statement            : 36
statement_list       : 16 20 25 30 36 51 52 54
string_expression    : 63 65 90 95
string_literal       : 95 96
string_primitive     : 86
string_value         : 14 25 97 111 135
tf_expression        : 51 52 64 91 99 99 100 100 101 102
tf_literal           : 103 108
tf_primitive         : 87
to_or_nothing        : 
trait_definition     : 4
using                : 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program definition
    (3) program -> . empty
    (1) empty -> .

    TRAIT           reduce using rule 1 (empty -> .)
    CHARACTER       reduce using rule 1 (empty -> .)
    SETTING         reduce using rule 1 (empty -> .)
    ITEM            reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . definition
    (4) definition -> . trait_definition
    (5) definition -> . character_definition
    (6) definition -> . setting_definition
    (7) definition -> . item_definition
    (8) trait_definition -> . TRAIT ID COLON desc_or_nothing s_directive f_or_nothing END_BLOCK
    (9) character_definition -> . CHARACTER ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK
    (10) setting_definition -> . SETTING ID COLON desc_or_nothing s_directive END_BLOCK
    (11) item_definition -> . ITEM ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing END_BLOCK

    TRAIT           shift and go to state 6
    CHARACTER       shift and go to state 7
    SETTING         shift and go to state 4
    ITEM            shift and go to state 10

    definition                     shift and go to state 3
    item_definition                shift and go to state 5
    trait_definition               shift and go to state 8
    character_definition           shift and go to state 9
    setting_definition             shift and go to state 11

state 2

    (3) program -> empty .

    TRAIT           reduce using rule 3 (program -> empty .)
    CHARACTER       reduce using rule 3 (program -> empty .)
    SETTING         reduce using rule 3 (program -> empty .)
    ITEM            reduce using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)


state 3

    (2) program -> program definition .

    TRAIT           reduce using rule 2 (program -> program definition .)
    CHARACTER       reduce using rule 2 (program -> program definition .)
    SETTING         reduce using rule 2 (program -> program definition .)
    ITEM            reduce using rule 2 (program -> program definition .)
    $end            reduce using rule 2 (program -> program definition .)


state 4

    (10) setting_definition -> SETTING . ID COLON desc_or_nothing s_directive END_BLOCK

    ID              shift and go to state 12


state 5

    (7) definition -> item_definition .

    TRAIT           reduce using rule 7 (definition -> item_definition .)
    CHARACTER       reduce using rule 7 (definition -> item_definition .)
    SETTING         reduce using rule 7 (definition -> item_definition .)
    ITEM            reduce using rule 7 (definition -> item_definition .)
    $end            reduce using rule 7 (definition -> item_definition .)


state 6

    (8) trait_definition -> TRAIT . ID COLON desc_or_nothing s_directive f_or_nothing END_BLOCK

    ID              shift and go to state 13


state 7

    (9) character_definition -> CHARACTER . ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK

    ID              shift and go to state 14


state 8

    (4) definition -> trait_definition .

    TRAIT           reduce using rule 4 (definition -> trait_definition .)
    CHARACTER       reduce using rule 4 (definition -> trait_definition .)
    SETTING         reduce using rule 4 (definition -> trait_definition .)
    ITEM            reduce using rule 4 (definition -> trait_definition .)
    $end            reduce using rule 4 (definition -> trait_definition .)


state 9

    (5) definition -> character_definition .

    TRAIT           reduce using rule 5 (definition -> character_definition .)
    CHARACTER       reduce using rule 5 (definition -> character_definition .)
    SETTING         reduce using rule 5 (definition -> character_definition .)
    ITEM            reduce using rule 5 (definition -> character_definition .)
    $end            reduce using rule 5 (definition -> character_definition .)


state 10

    (11) item_definition -> ITEM . ID COLON desc_or_nothing s_directive a_or_nothing f_or_nothing END_BLOCK

    ID              shift and go to state 15


state 11

    (6) definition -> setting_definition .

    TRAIT           reduce using rule 6 (definition -> setting_definition .)
    CHARACTER       reduce using rule 6 (definition -> setting_definition .)
    SETTING         reduce using rule 6 (definition -> setting_definition .)
    ITEM            reduce using rule 6 (definition -> setting_definition .)
    $end            reduce using rule 6 (definition -> setting_definition .)


state 12

    (10) setting_definition -> SETTING ID . COLON desc_or_nothing s_directive END_BLOCK

    COLON           shift and go to state 16


state 13

    (8) trait_definition -> TRAIT ID . COLON desc_or_nothing s_directive f_or_nothing END_BLOCK

    COLON           shift and go to state 17


state 14

    (9) character_definition -> CHARACTER ID . COLON desc_or_nothing s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK

    COLON           shift and go to state 18


state 15

    (11) item_definition -> ITEM ID . COLON desc_or_nothing s_directive a_or_nothing f_or_nothing END_BLOCK

    COLON           shift and go to state 19


state 16

    (10) setting_definition -> SETTING ID COLON . desc_or_nothing s_directive END_BLOCK
    (12) desc_or_nothing -> . description_string
    (13) desc_or_nothing -> . empty
    (14) description_string -> . string_value
    (1) empty -> .
    (94) string_value -> . STRING_VAL

    START           reduce using rule 1 (empty -> .)
    STRING_VAL      shift and go to state 22

    desc_or_nothing                shift and go to state 21
    description_string             shift and go to state 23
    empty                          shift and go to state 24
    string_value                   shift and go to state 20

state 17

    (8) trait_definition -> TRAIT ID COLON . desc_or_nothing s_directive f_or_nothing END_BLOCK
    (12) desc_or_nothing -> . description_string
    (13) desc_or_nothing -> . empty
    (14) description_string -> . string_value
    (1) empty -> .
    (94) string_value -> . STRING_VAL

    START           reduce using rule 1 (empty -> .)
    STRING_VAL      shift and go to state 22

    string_value                   shift and go to state 20
    desc_or_nothing                shift and go to state 25
    description_string             shift and go to state 23
    empty                          shift and go to state 24

state 18

    (9) character_definition -> CHARACTER ID COLON . desc_or_nothing s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK
    (12) desc_or_nothing -> . description_string
    (13) desc_or_nothing -> . empty
    (14) description_string -> . string_value
    (1) empty -> .
    (94) string_value -> . STRING_VAL

    START           reduce using rule 1 (empty -> .)
    STRING_VAL      shift and go to state 22

    string_value                   shift and go to state 20
    desc_or_nothing                shift and go to state 26
    description_string             shift and go to state 23
    empty                          shift and go to state 24

state 19

    (11) item_definition -> ITEM ID COLON . desc_or_nothing s_directive a_or_nothing f_or_nothing END_BLOCK
    (12) desc_or_nothing -> . description_string
    (13) desc_or_nothing -> . empty
    (14) description_string -> . string_value
    (1) empty -> .
    (94) string_value -> . STRING_VAL

    START           reduce using rule 1 (empty -> .)
    STRING_VAL      shift and go to state 22

    string_value                   shift and go to state 20
    desc_or_nothing                shift and go to state 27
    description_string             shift and go to state 23
    empty                          shift and go to state 24

state 20

    (14) description_string -> string_value .

    START           reduce using rule 14 (description_string -> string_value .)


state 21

    (10) setting_definition -> SETTING ID COLON desc_or_nothing . s_directive END_BLOCK
    (15) s_directive -> . START COLON start_list END_BLOCK

    START           shift and go to state 29

    s_directive                    shift and go to state 28

state 22

    (94) string_value -> STRING_VAL .

    CONCAT          reduce using rule 94 (string_value -> STRING_VAL .)
    EXIT            reduce using rule 94 (string_value -> STRING_VAL .)
    PRINT           reduce using rule 94 (string_value -> STRING_VAL .)
    ADD             reduce using rule 94 (string_value -> STRING_VAL .)
    REMOVE          reduce using rule 94 (string_value -> STRING_VAL .)
    SET             reduce using rule 94 (string_value -> STRING_VAL .)
    MOVE            reduce using rule 94 (string_value -> STRING_VAL .)
    INCREASE        reduce using rule 94 (string_value -> STRING_VAL .)
    DECREASE        reduce using rule 94 (string_value -> STRING_VAL .)
    INITIATE        reduce using rule 94 (string_value -> STRING_VAL .)
    IF              reduce using rule 94 (string_value -> STRING_VAL .)
    EXECUTE         reduce using rule 94 (string_value -> STRING_VAL .)
    GOTO            reduce using rule 94 (string_value -> STRING_VAL .)
    USING           reduce using rule 94 (string_value -> STRING_VAL .)
    END_BLOCK       reduce using rule 94 (string_value -> STRING_VAL .)
    LTHAN           reduce using rule 94 (string_value -> STRING_VAL .)
    GTHAN           reduce using rule 94 (string_value -> STRING_VAL .)
    LTHANEQ         reduce using rule 94 (string_value -> STRING_VAL .)
    GTHANEQ         reduce using rule 94 (string_value -> STRING_VAL .)
    ISEQUAL         reduce using rule 94 (string_value -> STRING_VAL .)
    NOTEQUAL        reduce using rule 94 (string_value -> STRING_VAL .)
    EQUALS          reduce using rule 94 (string_value -> STRING_VAL .)
    NOT             reduce using rule 94 (string_value -> STRING_VAL .)
    START           reduce using rule 94 (string_value -> STRING_VAL .)
    COLON           reduce using rule 94 (string_value -> STRING_VAL .)
    OR              reduce using rule 94 (string_value -> STRING_VAL .)
    AND             reduce using rule 94 (string_value -> STRING_VAL .)
    RPAREN          reduce using rule 94 (string_value -> STRING_VAL .)
    COMMA           reduce using rule 94 (string_value -> STRING_VAL .)
    RBRACE          reduce using rule 94 (string_value -> STRING_VAL .)


state 23

    (12) desc_or_nothing -> description_string .

    START           reduce using rule 12 (desc_or_nothing -> description_string .)


state 24

    (13) desc_or_nothing -> empty .

    START           reduce using rule 13 (desc_or_nothing -> empty .)


state 25

    (8) trait_definition -> TRAIT ID COLON desc_or_nothing . s_directive f_or_nothing END_BLOCK
    (15) s_directive -> . START COLON start_list END_BLOCK

    START           shift and go to state 29

    s_directive                    shift and go to state 30

state 26

    (9) character_definition -> CHARACTER ID COLON desc_or_nothing . s_directive a_or_nothing f_or_nothing d_or_nothing END_BLOCK
    (15) s_directive -> . START COLON start_list END_BLOCK

    START           shift and go to state 29

    s_directive                    shift and go to state 31

state 27

    (11) item_definition -> ITEM ID COLON desc_or_nothing . s_directive a_or_nothing f_or_nothing END_BLOCK
    (15) s_directive -> . START COLON start_list END_BLOCK

    START           shift and go to state 29

    s_directive                    shift and go to state 32

state 28

    (10) setting_definition -> SETTING ID COLON desc_or_nothing s_directive . END_BLOCK

    END_BLOCK       shift and go to state 33


state 29

    (15) s_directive -> START . COLON start_list END_BLOCK

    COLON           shift and go to state 34


state 30

    (8) trait_definition -> TRAIT ID COLON desc_or_nothing s_directive . f_or_nothing END_BLOCK
    (27) f_or_nothing -> . f_directive
    (28) f_or_nothing -> . empty
    (29) f_directive -> . FUNCTIONS COLON function_list END_BLOCK
    (1) empty -> .

    FUNCTIONS       shift and go to state 35
    END_BLOCK       reduce using rule 1 (empty -> .)

    f_directive                    shift and go to state 36
    f_or_nothing                   shift and go to state 37
    empty                          shift and go to state 38

state 31

    (9) character_definition -> CHARACTER ID COLON desc_or_nothing s_directive . a_or_nothing f_or_nothing d_or_nothing END_BLOCK
    (22) a_or_nothing -> . a_directive
    (23) a_or_nothing -> . empty
    (24) a_directive -> . ACTIONS COLON action_list END_BLOCK
    (1) empty -> .

    ACTIONS         shift and go to state 40
    FUNCTIONS       reduce using rule 1 (empty -> .)
    DIALOGUE        reduce using rule 1 (empty -> .)
    END_BLOCK       reduce using rule 1 (empty -> .)
